# cb-cpp

./: .gitignore  README.md
QtGuiApplication1/: QtGuiApplication1.sln  QtGuiApplication1.vcxproj  QtGuiApplication1.vcxproj.filters  coordinatesdialog.cpp  coordinatesdialog.h  coordinatesdialog.ui  main.cpp  model.cpp  model.h  qtguiapplication1.cpp  qtguiapplication1.h  qtguiapplication1.ui  transformationmatrix4x4.h
f_ol_and_const/: CMakeLists.txt  f_ol_and_const.cpp
template-metaprograming-factorial/: CMakeLists.txt  template-metaprograming-factorial.cpp
