# CMakeList.txt : CMake project for f_ol_and_const, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("f_ol_and_const")

# Add source to this project's executable.
add_executable (f_ol_and_const "f_ol_and_const.cpp")

# TODO: Add tests and install targets if needed.
