# CMakeList.txt : CMake project for template-metaprograming-factorial, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project(TemplateMetaprogrammingFactorialSolution)

# Add source to this project's executable.
add_executable (template-metaprograming-factorial "template-metaprograming-factorial.cpp")

# TODO: Add tests and install targets if needed.
